Updated nav part 2 index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
 
   <main>
-    <section id="introduction">
+    <section id="intro">
       <h2>1. Introduction</h2>
       <p>My name is Cody Swann and I am a junior at Mississippi State University in Computer Engineering. This is my dissection project for Embedded Systems (ECE 4724).
       </p> The device that I chose is the Onn Mini Rugged Bluetooth Speaker. I chose this speaker because of its compact design, its use of wireless audio technology, and my interest in understanding how consumer electronic products manage power, signal processing, and connectivity in small packages.</p>
