--- a/index.html
+++ b/index.html
@@ -270,10 +270,7 @@
         <h2>Bill of Materials</h2>
         <p>List of all components with their respective quantities and costs will go here.</p>
     </section>
-
-    <section id="schematic">
-        <h2>Schematic</h2>
-        <h3>Main Components</h3>
+            <h3>Main Components</h3>
     <table>
         <tr>
             <th>Component</th>
@@ -368,6 +365,11 @@
     </table>
 
     <p><em>Note: Some components are used across multiple zones. Values may vary slightly due to manufacturing tolerances.</em></p>
+</section>
+
+    <section id="schematic">
+        <h2>Schematic</h2>
+        <p>List of all components with their respective quantities and costs will go here.</p>
 </section>
     
     <section id="analysis">
