Update BOM test 3 index.html

--- a/index.html
+++ b/index.html
@@ -268,21 +268,22 @@
     
     <section id="bom">
         <h2>Bill of Materials</h2>
-        <p>List of all components with their respective quantities and costs will go here.</p>
-    </section>
-            <h3>Main Components</h3>
+        <h3>Main Components</h3>
     <table>
         <tr>
             <th>Component</th>
             <th>Description</th>
+            <th>Price</th>
         </tr>
         <tr>
             <td>Battery</td>
             <td>3.7V Lithium-Ion Rechargeable Battery</td>
+            <td>$</td>
         </tr>
         <tr>
             <td>Speaker</td>
             <td>Small Full-Range Speaker Driver</td>
+            <td>$</td>
         </tr>
     </table>
 
@@ -293,22 +294,27 @@
         <tr>
             <th>Component</th>
             <th>Details</th>
+            <th>Price</th>
         </tr>
         <tr>
             <td>IP4056</td>
             <td>Battery Charging Chip</td>
+            <td>$</td>
         </tr>
         <tr>
             <td>Capacitors</td>
             <td>6 total (2 large, 1 medium, 3 small)</td>
+            <td>$</td>
         </tr>
         <tr>
             <td>Resistors</td>
             <td>1.87kΩ, 4.5kΩ, 5.4kΩ, 5.7kΩ, 5.6kΩ, 5.6kΩ, 4.5kΩ, 100Ω, 1.5kΩ</td>
+            <td>$</td>
         </tr>
         <tr>
             <td>Transistor</td>
             <td>1 total</td>
+            <td>$</td>
         </tr>
     </table>
 
@@ -317,18 +323,22 @@
         <tr>
             <th>Component</th>
             <th>Details</th>
+            <th>Price</th>
         </tr>
         <tr>
             <td>LTK5302</td>
             <td>High-Quality Audio Amplifier Chip</td>
+            <td>$</td>
         </tr>
         <tr>
             <td>Capacitors</td>
             <td>4 total (1 medium, 3 small)</td>
+            <td>$</td>
         </tr>
         <tr>
             <td>Resistors</td>
             <td>100kΩ, 160kΩ, 2Ω, 9.5kΩ, 30kΩ, 10kΩ, 450Ω, 2kΩ, 2kΩ, 75kΩ, 75kΩ, 450Ω</td>
+            <td>$</td>
         </tr>
     </table>
 
@@ -337,30 +347,37 @@
         <tr>
             <th>Component</th>
             <th>Details</th>
+            <th>Price</th>
         </tr>
         <tr>
             <td>ATS2853</td>
             <td>Bluetooth Chip</td>
+            <td>$</td>
         </tr>
         <tr>
             <td>Resistors</td>
             <td>6kΩ, 3.57kΩ, 1kΩ, 1Ω, 6kΩ, 1kΩ</td>
+            <td>$</td>
         </tr>
         <tr>
             <td>Capacitors</td>
             <td>14 total (various sizes)</td>
+            <td>$</td>
         </tr>
         <tr>
             <td>Inductor</td>
             <td>1 total</td>
+            <td>$</td>
         </tr>
         <tr>
             <td>Diode</td>
             <td>1 total</td>
+            <td>$</td>
         </tr>
         <tr>
             <td>Transistor</td>
             <td>1 total</td>
+            <td>$</td>
         </tr>
     </table>
 
