Updated INTRO with face index.html

--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
   <main>
     <section id="intro">
       <h2>1. Introduction</h2>
-      <p>My name is Cody Swann and I am a junior at Mississippi State University in Computer Engineering. This is my dissection project for Embedded Systems (ECE 4724).
-      </p> The device that I chose is the Onn Mini Rugged Bluetooth Speaker. I chose this speaker because of its compact design, its use of wireless audio technology, and my interest in understanding how consumer electronic products manage power, signal processing, and connectivity in small packages.</p>
-        </p>
-    </section>
+<div style="display: flex; align-items: center; gap: 20px; flex-wrap: wrap;">
+    <img src="images/cody_face.jpg" alt="Photo of Cody" style="max-width: 200px; width: 100%; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+    <div style="flex: 1;">
+      <p>My name is Cody Swann and I am a junior at Mississippi State University in Computer Engineering. This is my dissection project for Embedded Systems (ECE 4724).</p>
+      <p>The device that I chose is the Onn Mini Rugged Bluetooth Speaker. I chose this speaker because of its compact design, its use of wireless audio technology, and my interest in understanding how consumer electronic products manage power, signal processing, and connectivity in small packages.</p>
+    </div>
+  </div>
+</section>
 
     <section id="market-analysis">
       <h2>2. Market Analysis</h2>
