--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section id="intro">
       <h2>1. Introduction</h2>
 <div style="display: flex; align-items: center; gap: 20px; flex-wrap: wrap;">
-    <img src="images/cody_face.jpg" alt="Photo of Cody" style="max-width: 200px; width: 100%; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+    <img src="images/cody_face.png" alt="Photo of Cody" style="max-width: 200px; width: 100%; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
     <div style="flex: 1;">
       <p>My name is Cody Swann and I am a junior at Mississippi State University in Computer Engineering. This is my dissection project for Embedded Systems (ECE 4724).</p>
       <p>The device that I chose is the Onn Mini Rugged Bluetooth Speaker. I chose this speaker because of its compact design, its use of wireless audio technology, and my interest in understanding how consumer electronic products manage power, signal processing, and connectivity in small packages.</p>
@@ -235,7 +235,7 @@
   <p>
     The following diagram shows the general flow of user interaction with the speaker, including power control, Bluetooth pairing, playback, and shutdown behavior.
   </p>
-  <img src="images/User_Operation.png" alt="User Operation Diagram" class="centered-img" />
+  <img src="images/user_operation.png" alt="User Operation Diagram" class="centered-img" />
 
   <h3>Mode Display Diagram</h3>
   <p>
@@ -388,21 +388,22 @@
     <p><em>Note: Some components are used across multiple zones. Values may vary slightly due to manufacturing tolerances.</em></p>
 </section>
 
+    
     <section id="schematic">
         <h2>6. Schematic</h2>
             <h3>Circuit Diagram</h3>
-      <div class="diagram">
-        <img src="dissection_images/circuit_diagram.jpg" alt="Circuit Diagram">
-      </div>
+
+        <img src="images/circuit_diagram.png" alt="Circuit Diagram" class="centered-img" />
+
         <p>List of all components with their respective quantities and costs will go here.</p>
 </section>
     
     <section id="analysis">
            <h2>7. Product Analysis</h2>
             <h3>High‑Level Design Diagram</h3>
-      <div class="diagram">
-        <img src="dissection_images/high_level_diagram.png" alt="High-Level Design">
-      </div>
+
+        <img src="images/high_level_diagram.png" alt="High-Level Design" class="centered-img" />
+
             <p>The speaker contains multiple subsystems including:</p>
             <ul>
                 <li><strong>Power management:</strong> IP4056 (battery charging IC)</li>
