Updated photos  index.html

--- a/index.html
+++ b/index.html
@@ -220,14 +220,18 @@
   <p>
     The following diagram shows the general flow of user interaction with the speaker, including power control, Bluetooth pairing, playback, and shutdown behavior.
   </p>
+      <div class="diagram-image">
   <img src="images/user_operation.png" alt="User Operation Diagram" class="centered-img" />
-
+      </div>
+      
   <h3>Mode Display Diagram</h3>
   <p>
     The speaker uses a basic internal LED indicator and audio feedback tones to indicate operational modes. These include power-on, pairing mode, connected, and low battery warnings. The following diagram summarizes the indicators associated with each mode.
   </p>
+      <div class="diagram-image">
   <img src="images/Mode_Display.png" alt="Mode Display Diagram" class="centered-img" />
-
+      </div>
+      
   <h3>Waveforms</h3>
   <p>
     The following waveforms were taken directly from test points on the speaker’s internal PCB while the device was powered on and operating. These highlight signal behavior associated with audio processing and system states.
