Updated photos more index.html

--- a/index.html
+++ b/index.html
@@ -381,18 +381,18 @@
     <section id="schematic">
         <h2>6. Schematic</h2>
             <h3>Circuit Diagram</h3>
-
+<div class="diagram-image">
         <img src="images/circuit_diagram.png" alt="Circuit Diagram" class="centered-img" />
-
+</div>
         <p>List of all components with their respective quantities and costs will go here.</p>
 </section>
     
     <section id="analysis">
            <h2>7. Product Analysis</h2>
             <h3>High‑Level Design Diagram</h3>
-
+<div class="diagram-image">
         <img src="images/high_level_diagram.png" alt="High-Level Design" class="centered-img" />
-
+</div>
             <p>The speaker contains multiple subsystems including:</p>
             <ul>
                 <li><strong>Power management:</strong> IP4056 (battery charging IC)</li>
