Updated prices index.html

--- a/index.html
+++ b/index.html
@@ -307,12 +307,22 @@
         <tr>
             <td>Battery</td>
             <td>3.7V Lithium-Ion Rechargeable Battery</td>
-            <td>$</td>
+            <td>$6.95</td>
         </tr>
         <tr>
             <td>Speaker</td>
             <td>Small Full-Range Speaker Driver</td>
-            <td>$</td>
+            <td>$unknown</td>
+        </tr>
+              <tr>
+            <td>Casing</td>
+            <td>Hard plastic cover to protect speaker</td>
+            <td>$unknown</td>
+        </tr>
+              <tr>
+            <td>PCB</td>
+            <td>The printed ciruit board with the components on it</td>
+            <td>$unknown</td>
         </tr>
     </table>
 
@@ -328,22 +338,22 @@
         <tr>
             <td>IP4056</td>
             <td>Battery Charging Chip</td>
-            <td>$</td>
+            <td>$1.17</td>
         </tr>
         <tr>
             <td>Capacitors</td>
             <td>6 total (2 large, 1 medium, 3 small)</td>
-            <td>$</td>
+            <td>$0.02 each</td>
         </tr>
         <tr>
             <td>Resistors</td>
             <td>1.87kΩ, 4.5kΩ, 5.4kΩ, 5.7kΩ, 5.6kΩ, 5.6kΩ, 4.5kΩ, 100Ω, 1.5kΩ</td>
-            <td>$</td>
+            <td>$0.0025 each</td>
         </tr>
         <tr>
             <td>Transistor</td>
             <td>1 total</td>
-            <td>$</td>
+            <td>$0.037</td>
         </tr>
     </table>
 
@@ -357,17 +367,17 @@
         <tr>
             <td>LTK5302</td>
             <td>High-Quality Audio Amplifier Chip</td>
-            <td>$</td>
+            <td>$2</td>
         </tr>
         <tr>
             <td>Capacitors</td>
             <td>4 total (1 medium, 3 small)</td>
-            <td>$</td>
+            <td>$0.02 each</td>
         </tr>
         <tr>
             <td>Resistors</td>
             <td>100kΩ, 160kΩ, 2Ω, 9.5kΩ, 30kΩ, 10kΩ, 450Ω, 2kΩ, 2kΩ, 75kΩ, 75kΩ, 450Ω</td>
-            <td>$</td>
+            <td>$0.0025 each</td>
         </tr>
     </table>
 
@@ -381,32 +391,32 @@
         <tr>
             <td>ATS2853</td>
             <td>Bluetooth Chip</td>
-            <td>$</td>
+            <td>$4.432</td>
         </tr>
         <tr>
             <td>Resistors</td>
             <td>6kΩ, 3.57kΩ, 1kΩ, 1Ω, 6kΩ, 1kΩ</td>
-            <td>$</td>
+            <td>$0.0025 each</td>
         </tr>
         <tr>
             <td>Capacitors</td>
             <td>14 total (various sizes)</td>
-            <td>$</td>
+            <td>$0.02 each</td>
         </tr>
         <tr>
             <td>Inductor</td>
             <td>1 total</td>
-            <td>$</td>
+            <td>$0.19</td>
         </tr>
         <tr>
             <td>Diode</td>
             <td>1 total</td>
-            <td>$</td>
+            <td>$0.019</td>
         </tr>
         <tr>
             <td>Transistor</td>
             <td>1 total</td>
-            <td>$</td>
+            <td>$0.037</td>
         </tr>
     </table>
 
