Updated finished t1 index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </header>
 
  <nav>
+   
         <ul>
             <li><a href="#intro">Introduction</a></li>
             <li><a href="#market-analysis">Market Analysis</a></li>
@@ -23,7 +24,6 @@
             <li><a href="#analysis">Product Analysis</a></li>
             <li><a href="#reassembly">Product Reassembly</a></li>
             <li><a href="#lessons">Lessons Learned</a></li>
-            <li><a href="#download">Download Report</a></li>
         </ul>
     </nav>
 
@@ -457,6 +457,10 @@
 
     <section id="reassembly">
         <h2>8. Reassembly</h2>
+      <div class="diagram-image">
+        <img src="images/reassembly.jpeg" alt="reassemble" class="centered-img" />
+</div>
+      
         <p>Once the internal components were examined and photographed, the speaker was reassembled. The power button was tested and the speaker successfully powered on, reconnected to Bluetooth, and played audio as expected.</p>
     </section>
 
@@ -465,10 +469,7 @@
              <p>This project provided a hands-on understanding of embedded system integration in consumer electronics. Key takeaways included PCB trace routing, system-level design around microcontrollers, and power/audio management.</p>
     </section>
 
-    <section id="download">
-        <h2>Download Report</h2>
-        <p><a href="Onn_Speaker_Dissection_Report.pdf" download>Click here to download the full project report as a PDF.</a></p>
-    </section>
+
   
 </main>
   <footer>
